loki-external.yml
apiVersion: v1 
kind: Service
metadata:
  namespace: zachary-lavallee 
  name: loki 
spec:
  type: ExternalName
  externalName: loki.default.svc.cluster.local
  #<service-name>.<namespace-name>.svc.cluster.local
  #this will redirect traffic to another service in a different namespace
  #this is important, because by default, pods can only see/communicate with services
  #within the same space
  ports:
  - port: 3100
    targetPort: 3100
    protocol: TCP
