project1-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: zachary-lavallee
  name: project1
spec:
  selector:
    app: project1
  ports:
  - name: http
    protocol: TCP
    port: 8980
    targetPort: 8980
  type: NodePort
