project1-ingress.yml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata: 
  namespace: zachary-lavallee
  name: log-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /lavallee-project1/?(.*)
        backend:
          serviceName: project1
          servicePort: 8980
